<?xml version="1.0"?>
<package format="2">
  <name>pf_description</name>
  <version>1.2.0</version>
  <description>The pf_description package</description>

  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</maintainer>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</author>
  <license>Apache2.0</license>
  <url type="website">https://github.com/PepperlFuchs/pf_lidar_ros_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
