<?xml version="1.0"?>
<package format="2">
  <name>pf_driver</name>
  <version>0.0.1</version>
  <description>The Pepperl+Fuchs package</description>

  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</maintainer>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</author>
  <license>Apache2.0</license>
  <url type="website">http://wiki.ros.org/pepperl_fuchs_r2000</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libcpprest-dev</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
